🧀🍴 Added some projects, changed some texts on main site

--- a/join-us.njk
+++ b/join-us.njk
@@ -30,7 +30,7 @@ eleventyNavigation:
 <h2>How do I apply for the waitlist?</h2>
 
 <p>
-To apply for the waitlist, tell us a little bit about yourself via <strong><a href="https://tiny-factories.typeform.com/to/hotpAx">this form</a></strong> and expect to hear from us! 
+To apply for the waitlist, tell us a little bit about yourself via <strong><a href="https://tiny-factories.typeform.com/to/hotpAx">this form</a></strong>!  
 <br>
 However, this group is not trying to become another mega-slack-group with too many strangers. We want to make sure that each of us know one another by our face and our name~. So we might have to bring in new members in slowly and as a sustainable pace.
 </p>
@@ -42,7 +42,7 @@ Unfortunately, no. We started the community as a free-to-join group, but as we e
 </p>
 
 <p>
-We believe it takes a while to truly become a part of a friend and peer group. So we ask each member to commit to a minimum of three-month membership. Currently, as a member, we each contribute $20 to the piggy bank.
+We believe it takes a while to truly become a part of a friend and peer group. So we ask each member to commit to a minimum of three-month membership. Currently, as a member, we each contribute $20 to the piggy bank(might change in the future).
 </p>
 
 <div class="ascii">                      
