🦂👶 Changed gif on top page and updated the member section

--- a/index.njk
+++ b/index.njk
@@ -57,10 +57,10 @@ You can upload early work-in-progress stuff to receive feedback from peer member
 We also have a recurring online session where we meet the other members and share our progress, do live prototype testing and many more.
 </p>
 
-<img class="tf_images" src="https://cdn.glitch.com/88b0616c-3f0c-4d6f-a529-e928070e556d%2FmeetupGIF.gif?v=1608127198430" alt="meetup pic">
+<img class="tf_images" src="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ftiny_gif.gif?v=1620476078327" alt="meetup pic">
 
 <p class = "photo_description">
-Online sessions to get to know each other
+Online sessions to share work in progress on MakeSpace
 </p>
 
 
