--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -44,7 +44,7 @@
     
     <script type="text/javascript" src="/js/colors.js"></script>
 
-<!-- <script async defer data-website-id="2b6c9aa0-e9b8-48b1-bf84-7f599b652913" src="https://umami.tinyfactories.space/umami.js"></script> -->
+<script async defer data-website-id="2b6c9aa0-e9b8-48b1-bf84-7f599b652913" src="https://umami.tinyfactories.space/umami.js"></script>
   </head>
   <body>
     <header>
