--- a/support-us.njk
+++ b/support-us.njk
@@ -24,7 +24,7 @@ eleventyNavigation:
 <br>
 <p class="separater_line"></p>
 
-<p>Tiny Factories is currently operated and moderated by three main staff members: <a href="https://twitter.com/glitchyowl">Weiwei Hsu</a>, <a href="https://twitter.com/gndclouds">William Felker</a> and <a href="https://twitter.com/tomokihara">Tomo Kihara</a>. Often times, spaces for bon-fire discussions about creative work fizzle out after a while because it’s all voluntary work. We are committed to making a long-lasting space.<p/>
+<p>Tiny Factories is currently operated and moderated by three main staff members: <a href="https://twitter.com/weiweiwei33">Weiwei Hsu</a>, <a href="https://twitter.com/gndclouds">William Felker</a> and <a href="https://twitter.com/tomokihara">Tomo Kihara</a>. Often times, spaces for bon-fire discussions about creative work fizzle out after a while because it’s all voluntary work. We are committed to making a long-lasting space.<p/>
 
 <p>Early support in Tiny Factories is instrumental to the vibrancy of this group. We have planned out the development of Tiny Factories and compartmentalized them into 6 stages. As the number of members and supporters increase, members will enjoy an increased access of programming and support orchestrated by staff. Additionally, we will be able to dedicate more time into the design, development, and maintenance of Tiny Factories. If you are eager like we are to dedicate more time in the world of creative expression, we invite you to join us in making a space for finding creative footing that lasts.</p>
 
