--- a/members/index.njk
+++ b/members/index.njk
@@ -28,19 +28,24 @@ eleventyNavigation:
 <section>
   <div >
   {% for members in members.Members.results  | randomOrder %}
-  <div >
-  {{members.properties.HeroImage}}
-  <img src={{members.properties.TinyProfile.files[0].file.url}} alt={{members.properties.Name.title[0].text.content}}/>
+  {% if members.properties.Publish.checkbox === true %}
+  <div style="margin-top: 100px">
+
+  <img class="tf_images" style="margin-top: 20px" src={{members.properties.TinyProfile.files[0].file.url}} alt={{members.properties.Name.title[0].text.content}}/>
+  <div style="margin-left: 20px">
+    <p class="f4 bg-near-black white mv0 pv2 ph3">
+    <a href={{members.properties.Link.url}} >{{members.properties.Name.title[0].text.content}}</a>
+    </p>
+    <p class="f4 bg-near-black white mv0 pv2 ph3">
+    <a href={{members.properties.Link.url}} >  {{members.properties.Description.rich_text[0].plain_text}}
+    </a>
+    </p>
   </div>
-  <div>
-  <p>
-  <a href={{members.properties.Link.url}}>{{members.properties.Name.title[0].text.content}}</a>
-  <br/>
-  {{members.properties.Description.rich_text[0].plain_text}}
-  </p>
-  </div>
+
+  {% endif %}
   {% endfor %}
   </div>
+
 </section>
 
 
