--- a/tiny-gatherings/index.njk
+++ b/tiny-gatherings/index.njk
@@ -1,6 +1,5 @@
 ---
 layout: layouts/home.njk
-
 ---
 
 
@@ -15,7 +14,7 @@ NEED ASCII
 
 NEED ASCII
 
-<h3 class="page_top">Comming Soon!</h3>
+<h3 class="page_top">A home for our future, past and present.</h3>
 <br>
 <br>
 <p class="separater_line"></p>
