--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,17 +3,17 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="icon" type="image/jpeg" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon.jpeg?v=1613221712853" sizes="16x16">
 <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-32.png?v=1613222071098" sizes="32x32">
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-128.png?v=1613222071099" sizes="128x128"> 
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-128.png?v=1613222071099" sizes="128x128">
 <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-181.png?v=1613222071098" sizes="32x32">
-  <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-181.png?v=1613222071098" sizes="181x181"> 
+  <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-181.png?v=1613222071098" sizes="181x181">
 <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-192.png?v=1613222071098" sizes="192x192">
   <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-196.png?v=1613222071098" sizes="196x196">
-  
-  
-  
+
+
+
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
@@ -35,16 +35,18 @@
   <meta property="twitter:title" content="{{ renderData.title or title or metadata.title }}">
   <meta property="twitter:description" content="{{ renderData.description or description or metadata.description }}">
   <meta property="twitter:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen-graph.png?v=1613224809339">
-  
+
 
 
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-    
-    <script type="text/javascript" src="/js/colors.js"></script>
 
-<script async defer data-website-id="2b6c9aa0-e9b8-48b1-bf84-7f599b652913" src="https://umami.tinyfactories.space/umami.js"></script>
+    <script type="text/javascript" src="/js/colors.js"></script>
+    {% if process.env.UMAMI === true %}
+     <script async defer data-website-id="2b6c9aa0-e9b8-48b1-bf84-7f599b652913" src="https://umami.tinyfactories.space/umami.js"></script>
+    {% endif %}
+
   </head>
   <body>
     <header>
@@ -52,20 +54,20 @@
     </header>
 
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
-      
+
       {{ content | safe }}
     </main>
 
     <footer></footer>
 
     <!-- Current page: {{ page.url | url }} -->
-    
+
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- 
+
 
   <script language="JavaScript">
 <!--
@@ -85,6 +87,6 @@ Scroll();
 </script>
 
 
- 
+
   </body>
 </html>
