--- a/newsletter/index.njk
+++ b/newsletter/index.njk
@@ -5,14 +5,48 @@ layout: layouts/home.njk
 <div class="container">
 
 
-{% include "ascii/members-hero.njk" %}
+<div class="ascii medium-ascii" >
+
+NEED NEWSLETTER HEADER
+
+
+</div>
+
+NEED ASCII ART
 
 
 
-<h3 class="page_top">Experiments and projects released by our community members and their collaborators.</h3>
+<h3 class="page_top"> Sharing the ups and downs of this journey is how we are going to keep ourselves accountable and be under a healthy amount of pressure.</h3>
 <br>
 <br>
 <p class="separater_line"></p>
+
+
+
+
+
+{% for newsletter in newsletters.Newsletters.results | randomOrder %}
+<br>
+<div>
+<a href={{newsletter.properties.Link.url}}><h2 class="f4 bg-near-black white mv0 pv2 ph3" style="margin-bottom: 15px">{{newsletter.properties.Name.title[0].text.content}}</h2></a>
+
+  <div class="pa3 bt">
+    <p class="f6 f5-ns lh-copy measure mv0" style="margin-bottom: 0px">
+      {{newsletter.properties.MetaDescription.rich_text[0].plain_text}}
+    </p>
+
+  </div>
+
+  <img class="tf_images" style="margin-top: 20px" src={{("/img/"+ (newsletter.properties.HeroImage.files[0].name).split(' ').join('_')).split('.').slice(0, -1).join('.') +".jpeg"}}
+   />
+
+    <br>
+
+  <p class="separater_line"></p>
+
+</div>
+
+{% endfor %}
 
 
 <section>
